se agregaron técnicas de minería de datos y se mejoró el formato de la sección de Videos

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -335,6 +335,33 @@
       <div class="flex justify-center items-center my-5">
         <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
+      <!--titulo Técnicas de minería de datos -->
+      <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">Técnicas de minería de datos</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        Existen diversas técnicas de minería de datos que se utilizan para descubrir patrones y tendencias en los datos. Algunas de las técnicas más comunes son:
+      </p>
+      <!--lista de tecnicas -->
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-xl">
+        <ol class="list-disc leading-relaxed  pl-6 space-y-4 text-gray-700 dark:text-gray-300">
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Árboles de decisión:</span> 
+            Un árbol de decisión es un modelo de predicción utilizado en el ámbito de la inteligencia artificial y el análisis predictivo, dada una base de datos se construyen estos diagramas de construcciones lógicas, 
+            muy similares a los sistemas de predicción basados en reglas, que sirven para representar y categorizar una serie de condiciones que suceden de forma sucesiva, para la resolución de un problema
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Agrupamiento o clustering:</span> 
+            Es un procedimiento de agrupación de una serie de vectores según criterios habitualmente de distancia; se tratará de disponer los vectores de entrada de forma que estén más cercanos aquellos que tengan características comunes
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Redes Neuronales:</span>
+            Utilizadas principalmente para algoritmos de deep learning, redes neuronales procesan datos por medio de los algoritmos de conectividad. Cada nodo se compone de entradas, ponderaciones, un sesgo y una salida
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Reglas de asociación:</span>
+            Es un método basado en reglas si/entonces para encontrar relaciones entre variables en un conjunto de datos. La fuerza de las relaciones se mide por el apoyo y la confianza. El nivel de confianza se basa en la frecuencia con la que las sentencias si o entonces son verdaderas. La medida de soporte es la frecuencia con la que se muestran los elementos relacionados en los datos y el lift es la probabilidad de que los elementos estén relacionados.
+          </li>
+        </ol>
+      </div>
       <!--conceptos avanzados -->
       <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">Conceptos Avanzados</h2>
       <p class="text-lg text-gray-700 dark:text-gray-300">
@@ -360,10 +387,6 @@
             Nos permiten asignar categorías o clases a nuevas instancias en base a un conjunto de datos de entrenamiento.
           </li>
           <li>
-            <span class="font-bold text-slate-700 dark:text-gray-400">Árboles de decisión:</span> 
-            Modelo predictivo de clasificación o regresión que se utiliza para representar y predecir resultados basados en una serie de condiciones.
-          </li>
-          <li>
             <span class="font-bold text-slate-700 dark:text-gray-400">Clasificación</span> 
             Es una técnica de minería de datos que se utiliza para organizar los datos en categorías o clases.
           </li>
@@ -382,10 +405,6 @@
           <li>
             <span class="font-bold text-slate-700 dark:text-gray-400">Naive Bayes:</span> 
             Algoritmo de clasificación que se basa en el teorema de Bayes para predecir la probabilidad de que una instancia pertenezca a una clase determinada.
-          </li>
-          <li>
-            <span class="font-bold text-slate-700 dark:text-gray-400">Redes Neuronales:</span> 
-            Modelo de aprendizaje profundo que se inspira en el funcionamiento del cerebro humano.
           </li>
           <li>
             <span class="font-bold text-slate-700 dark:text-gray-400">Algoritmos supervisados:</span> 
@@ -410,10 +429,6 @@
           <li>
             <span class="font-bold text-slate-700 dark:text-gray-400">Outliers:</span> 
             Valores atípicos que se encuentran en un conjunto de datos y que pueden afectar negativamente el rendimiento de un modelo.
-          </li>
-          <li>
-            <span class="font-bold text-slate-700 dark:text-gray-400">Clustering:</span> 
-            Técnica de minería de datos que se utiliza para agrupar datos similares en grupos o clusters.
           </li>
         </ol>
       </div>
