se arreglo enlaces erroneos en paginas

--- a/Pages/grafico.html
+++ b/Pages/grafico.html
@@ -119,7 +119,7 @@
           >Quiz</a
         >
         <a
-          href="../Pages/quiz.html"
+          href="../Pages/grafico.html"
           class="block px-4 py-2 text-blue-700 hover:text-red-600"
           >Gráfico Interactivo</a
         >
