--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           class="text-gray-500 dark:text-gray-400 text-center md:text-left mt-1"
         >
           En esta plataforma, aprenderás conceptos claves, herramientas y
-          obtendrás acceso a recursos como apoyo. Exploraremos conceptos basicos
+          obtendrás acceso a recursos como apoyo. Exploraremos conceptos básicos
           y avanzados de minería de datos, tendras acceso a un quiz para evaluar
           tus conocimientos y mucho mas.
         </p>
